add toast and success container passwordreset Component

--- a/src/app/landingpage/login/password-reset/password-reset.component.html
+++ b/src/app/landingpage/login/password-reset/password-reset.component.html
@@ -1,5 +1,7 @@
 <section>
     <app-header></app-header>
+       <!-- Formular Container  -->
+       @if (!passwordSent) {
 
     <form class="contentDiv" (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm">
         <h1>Reset password</h1>
@@ -45,7 +47,16 @@
 
         </div>
         <button type="submit" class="submitBtn" [ngClass]="{'submitBtn': checkAllInputs(), 'submitBtnDisabled': !checkAllInputs()}" [disabled]="!checkAllInputs()">Reset my password</button>
-    </form>
+    </form>  }
+
+        <!-- password wurde gesendet container -->
+        @if (passwordSent) {
+            <div class="successMessage">
+                <h1>Password Reset Successful</h1>
+                <p>Your password has been successfully reset.</p>
+              <button [routerLink]="['/login']" class="loginBtn">Back to Login</button>
+            </div>
+          }
     <app-footer></app-footer>
 </section>
 
