--- a/src/app/landingpage/login/password-reset/password-reset.component.scss
+++ b/src/app/landingpage/login/password-reset/password-reset.component.scss
@@ -150,3 +150,24 @@ section {
   font-size: 18px;
   font-weight: 400;
 }
+
+.successMessage{
+  @include dFlex($j: space-between);
+  flex-direction: column;
+  background-color: white;
+  border-radius: 25px;
+  padding: 2rem;
+  min-width: 400px;
+  h1 {
+    font-size: 3.5em;
+    margin: 0;
+    margin-bottom: 0.5rem;
+    color: $btnColor;
+    line-height: 1;
+  }
+ p{
+  color: black;
+  font-size: 18px;
+  font-weight: 400;
+ }
+}
