--- a/src/app/shared/login/header/header.component.scss
+++ b/src/app/shared/login/header/header.component.scss
@@ -30,3 +30,18 @@
         }
     }
 }
+
+@media (max-width: 600px) {
+   
+    .headerDiv {
+        img {
+            width: 3rem;
+            height: auto;
+            object-fit: contain;
+        }
+    
+        .loginBtn {
+         
+        }
+    }
+  }
