--- a/src/app/landingpage/login/login.component.scss
+++ b/src/app/landingpage/login/login.component.scss
@@ -177,3 +177,36 @@ section {
         cursor: pointer;
     }
 }
+
+@media (max-width: 630px) {
+   
+    .mainContent{
+        padding: 1rem;
+            min-width: auto;
+             margin: 2rem;
+       
+        .blueText{
+            font-weight: 700;
+            font-size: 18px;
+        }
+     
+        .blackText{
+            color: black;
+            font-weight: 500;
+            font-size: 16px;
+        }
+        }
+
+        .contentDiv {
+            padding-bottom: 16px;
+            min-width: auto;
+            width: 253px;
+            padding: 0.5rem;
+          
+            h1 {
+                font-size: 2.5em;
+                margin: 0;
+                margin-bottom: 0.5rem;
+            }
+        }
+  }
