toaster and login responsiv

--- a/src/app/landingpage/login/login.component.scss
+++ b/src/app/landingpage/login/login.component.scss
@@ -204,9 +204,12 @@ section {
             padding: 0.5rem;
           
             h1 {
-                font-size: 2.5em;
+                font-size: 2.3em;
                 margin: 0;
                 margin-bottom: 0.5rem;
             }
+        }
+        .signContainer{
+            margin-bottom: 12px;
         }
   }
