--- a/src/app/shared/login/header/header.component.scss
+++ b/src/app/shared/login/header/header.component.scss
@@ -34,10 +34,17 @@
 @media (max-width: 600px) {
    
     .headerDiv {
+        width: calc(100vw - 2rem);
         img {
             width: 3rem;
             height: auto;
             object-fit: contain;
         }
+    }
+  }
+  @media (max-width: 500px) {
+   
+    .headerDiv {
+        padding: 1rem;
     }
   }
