--- a/src/app/landingpage/video-site/profile-details/profile-details.component.scss
+++ b/src/app/landingpage/video-site/profile-details/profile-details.component.scss
@@ -13,6 +13,7 @@ section{
         padding: 1rem;
         img{
             cursor: pointer;
+            margin-left: 5rem;
         }
     }
 }
@@ -170,6 +171,29 @@ form{
     }
 }
 
+
+.blueBtnTopRight{
+    @include dFlex($g: 8px);
+    color: whitesmoke;
+    background-color: $btnColor;
+    padding: 16px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    border: none;
+    border-radius: 26px;
+    font-size: large;
+    cursor: pointer;
+    transition: ease-in-out 0.3s;
+    z-index: 2;
+    margin-right: 5rem;
+    &:hover {
+        background-color: white;
+        color: $btnColor;
+        img {
+            filter: invert(42%) sepia(100%) saturate(4000%) hue-rotate(220deg) brightness(95%) contrast(90%);
+        }
+    }
+}
 
 
 
