--- a/src/app/landingpage/login/register/register.component.scss
+++ b/src/app/landingpage/login/register/register.component.scss
@@ -40,7 +40,7 @@ section {
         color: $btnColor;
     }
     .positionInputs{
-        @include dFlex($a: start, $g: 12px);
+        @include dFlex($a: start, $g: 8px);
         flex-direction: column;
         width: 100%;
         .normalInput {
@@ -95,9 +95,12 @@ section {
     width: 100%;
     @include dFlex($j: flex-start, $g: 8px);
     color: red;
-    img{
-        margin-left: 16px;
-        margin-right: 8px;
+    span{
+        @include dFlex();
+        img{
+            margin-left: 16px;
+            margin-right: 8px;
+        }
     }
 }
 
@@ -139,5 +142,80 @@ section {
     img {
         margin-left: -40px;
         cursor: pointer;
+    }
+}
+
+@media (max-width: 630px) {
+    .contentDiv {
+        padding: 1rem;
+        min-width: 254px;
+        h1 {
+            font-size: 2.5em;
+        }
+        .positionInputs{
+            @include dFlex($a: start, $g: 12px);
+            flex-direction: column;
+            width: 100%;
+            .normalInput {
+                padding: 8px;
+                padding-left: 16px;
+                padding-right: 16px;
+                font-size: medium;
+            }
+        }
+    }
+
+    .warSpan{
+        font-size: small;
+        gap: 4px;
+        img{
+            margin: 0;
+            width: 12px;
+            height: 12px;
+        }
+    }
+
+    .invalidFeedback{
+        font-size: small;
+        span{
+            img{
+                margin: 0;
+                width: 12px;
+                height: 12px;
+                margin-right: 4px;
+            }
+        }
+    }
+
+    .passwortImg {
+        .passwordInput {
+            padding: 8px;
+            padding-right: 40px;
+            width: calc(100% - 3rem);
+            font-size: medium;
+        }
+    
+        img {
+            margin-left: -32px;
+            cursor: pointer;
+            width: 18px;
+            height: 18px;
+        }
+    }
+
+    .submitBtn {
+        padding: 0;
+        padding-top: 8px;
+        padding-bottom: 8px;
+        font-size: medium;
+        width: 108px;
+    }
+    
+    .submitBtnDisabled {
+        padding: 0;
+        padding-top: 8px;
+        padding-bottom: 8px;
+        font-size: medium;
+        width: 108px;
     }
 }
