--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@ body {
     margin: 0;
     scroll-behavior: smooth;
     font-family: DM Sans, sans-serif;
+    background-color: #060606;
 }
 
 .d-none {
