login header show funktion

--- a/src/app/landingpage/login/email-sent/email-send.component.html
+++ b/src/app/landingpage/login/email-sent/email-send.component.html
@@ -1,5 +1,5 @@
 <section>
-    <app-header></app-header>
+    <app-header [showImage]="true"></app-header>
   
     <!-- Formular Container  -->
     @if (!emailSent) {
