--- a/src/app/landingpage/login/login.component.html
+++ b/src/app/landingpage/login/login.component.html
@@ -1,6 +1,6 @@
 
 <section>
-    <app-header></app-header>
+    <app-header [showImage]="false"></app-header>
     <div class="mainContent">
         <form class="contentDiv" (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm">
             <h1>Log in</h1>
