--- a/src/app/landingpage/login/register/register.component.html
+++ b/src/app/landingpage/login/register/register.component.html
@@ -1,5 +1,5 @@
 <section>
-    <app-header></app-header>
+    <app-header [showImage]="true"></app-header>
 
     <form class="contentDiv" (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm">
         <h1>Sing Up</h1>
