--- a/src/app/shared/login/header/header.component.html
+++ b/src/app/shared/login/header/header.component.html
@@ -6,7 +6,8 @@
         <!-- default wert -->
         <img src="../../assets/img/Logo.svg" alt="Logo">
     </picture>
-    <button [routerLink]="['/login']" class="loginBtn">Log in</button>
+    @if (showImage) {<button [routerLink]="['/login']" class="loginBtn">Log in</button>}
+    
 </div>
 
 <!-- grundaufbau gucken ob das obere klappt mit verschiednen browsern  -->
