--- a/src/app/shared/login/header/header.component.scss
+++ b/src/app/shared/login/header/header.component.scss
@@ -1,46 +1,48 @@
-@import './../../../../styles.scss';
+@import "./../../../../styles.scss";
 
 .headerDiv {
-    @include dFlex($j: space-between);
-    padding: 3rem;
-    width: calc(100vw - 6rem);
+  @include dFlex($j: space-between);
+  padding: 3rem;
+  width: calc(100vw - 6rem);
 
-    img {
-        width: 20rem;
-        height: auto;
-        object-fit: contain;
+  img {
+    width: 20rem;
+    height: auto;
+    object-fit: contain;
+  }
+
+  .loginBtn {
+    color: whitesmoke;
+    background-color: $btnColor;
+    padding: 26px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    border: none;
+    border-radius: 40px;
+    font-size: larger;
+    cursor: pointer;
+    transition: ease-in-out 0.3s;
+
+    &:hover {
+      background-color: whitesmoke;
+      color: $btnColor;
     }
-
-    .loginBtn {
-        color: whitesmoke;
-        background-color: $btnColor;
-        padding: 26px;
-        padding-top: 12px;
-        padding-bottom: 12px;
-        border: none;
-        border-radius: 40px;
-        font-size: larger;
-        cursor: pointer;
-        transition: ease-in-out 0.3s;
-
-        &:hover {
-            background-color: whitesmoke;
-            color: $btnColor;
-        }
-    }
+  }
 }
 
 @media (max-width: 600px) {
-   
-    .headerDiv {
-        width: calc(100vw - 2.1rem);
-        padding: 1rem;
-        gap: 150px;  // mal testen wegen handy und nach vorlage 
-        justify-content: center; // mal testen wegen handy und nach vorlage 
-        img {
-            width: 3rem;
-            height: auto;
-            object-fit: contain;
-        }
+  .headerDiv {
+    width: calc(100vw - 2.1rem);
+    padding: 1rem;
+    gap: 150px; // mal testen wegen handy und nach vorlage
+    justify-content: center; // mal testen wegen handy und nach vorlage
+    img {
+      width: 3rem;
+      height: auto;
+      object-fit: contain;
     }
+    .loginBtn {
+      padding: 12px;
+    }
+  }
 }
