reset password responsiv and change validation

--- a/src/app/landingpage/login/password-reset/password-reset.component.html
+++ b/src/app/landingpage/login/password-reset/password-reset.component.html
@@ -15,7 +15,7 @@
                 <input [type]="passwordFieldType" [(ngModel)]="password" placeholder="Enter a password" name="firstPassword" #firstPassword="ngModel" required class="passwordInput">
                 <img src="../../assets/img/blue_eye.svg" alt="eye image" (click)="togglePasswordVisibility()">
             </div>
-            @if (!checkPassword() &&firstPassword.touched) {
+            <!-- @if (!checkPassword() &&firstPassword.touched) {
                 <div class="invalidFeedback">
                     @if (password == ''){
                         <span><img src="../../../../assets/img/warning.svg" alt="allertImg">Password is required</span>
@@ -23,7 +23,7 @@
                         <span><img src="../../../../assets/img/warning.svg" alt="allertImg">Password should have at least 5 characters</span>
                     } 
                 </div>
-            }
+            } -->
 
             <!----Confirm Password------>
             <div class="passwortImg">
@@ -39,7 +39,7 @@
                     } 
                 </div>
             }
-            @if (!checkEvenPasswords()) {
+            @if (!checkEvenPasswords()&& confirmPassword.touched) {
                 <div class="invalidFeedback">
                     <span><img src="../../../../assets/img/warning.svg" alt="allertImg">Please check whether the passwords match</span>
                 </div>
