--- a/src/app/landingpage/login/password-reset/password-reset.component.scss
+++ b/src/app/landingpage/login/password-reset/password-reset.component.scss
@@ -81,7 +81,7 @@ section {
 .submitBtnDisabled {
   margin-top: 1.2rem;
   color: #ffff;
-  background: #2E3EDF80;
+  background: #2e3edf80;
   padding: 26px;
   padding-top: 12px;
   padding-bottom: 12px;
@@ -151,7 +151,7 @@ section {
   font-weight: 400;
 }
 
-.successMessage{
+.successMessage {
   @include dFlex($j: space-between);
   flex-direction: column;
   background-color: white;
@@ -165,9 +165,60 @@ section {
     color: $btnColor;
     line-height: 1;
   }
- p{
-  color: black;
-  font-size: 18px;
-  font-weight: 400;
- }
+  p {
+    color: black;
+    font-size: 18px;
+    font-weight: 400;
+  }
+}
+
+@media (max-width: 630px) {
+  .contentDiv {
+    padding-bottom: 16px;
+    min-width: auto;
+    width: 254px;
+    padding: 1.5rem;
+
+    h1 {
+      font-size: 2em;
+      margin: 0;
+      margin-bottom: 0.5rem;
+    }
+  }
+  .submitBtn {
+    padding: 0;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    font-size: medium;
+    width: 96px;
+  }
+
+  .submitBtnDisabled {
+    padding: 0;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    font-size: medium;
+    width: 96px;
+  }
+
+  input[type="checkbox"] {
+    width: 16px;
+    height: 16px;
+  }
+
+  .infoText {
+    padding: 4px;
+    text-align: center;
+    padding-top: 18px;
+    padding-bottom: 18px;
+    span {
+      color: black;
+      font-size: 18px;
+      font-weight: 400;
+      /* Font DM Sans */
+    }
+  }
+  .invalidFeedback {
+    text-align: center;
+  }
 }
