--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -1,8 +1,9 @@
 <section>
-    <div class="headerDiv">
+    <!-- <div class="headerDiv">
         <img src="../../../assets/img/Logo.svg" alt="Logo">
         <button [routerLink]="['/login']">Log in</button>
-    </div>
+    </div> -->
+    <app-header [showImage]="true"></app-header>
 
     <div class="contentDiv">
         <h1>Movies, TV shwos and more</h1>
